Fixed color on mobile

--- a/src/app/timer/timer.component.css
+++ b/src/app/timer/timer.component.css
@@ -23,6 +23,7 @@ button {
   font-size: 1.25em;
   font-weight: bold;
   background-color: #f5f5f5;
+  color: #000;
   border: none;
   border-radius: 5px;
   cursor: pointer;
